--- a/new.yaml
+++ b/new.yaml
@@ -1,13 +1,16 @@
 ---
 
 - name: Update the web servers
-  hosts: nodes
+  hosts: n1
+  become: yes
   
   tasks:
   - name: Install pip on nodes
     apt:
       name: python3-pip
       state: present
+    when: ansible_distribution == "CentOS"
+      
 
 ...
 
